<resources>
    <string name="app_name">Citizen App</string>

    <!--    FB Access token -->
    <!--  1058543571164824|_J-big1hLg4lp8fRPZdnzhllIFk  -->
    <string name="facebook_app_id">1058543571164824</string>

    <!--  Maps API Key  -->
    <string name="maps_api_key">AIzaSyBnhRiB4J1pHrFa7Ex8p4jIcoLElac6JAM</string>

    <!--  NAVIGATION  -->
    <string name="nav_label_news">News-Novinky</string>
    <string name="nav_label_cities">Města</string>
    <string name="nav_label_city_detail">Detail města</string>
    <string name="nav_label_map">Mapa</string>
    <string name="nav_label_user_issues">Moje podněty</string>

    <!--  NAV MENU  -->
    <string name="nav_menu_news">News-Novinky</string>
    <string name="nav_menu_my_city">Moje město</string>
    <string name="nav_menu_cities">Města</string>
    <string name="nav_menu_map">Mapa</string>
    <string name="nav_menu_issues">Hlášení</string>
    <string name="nav_menu_pois">Zajímavá místa</string>

    <!--  OPTIONS MENU  -->
    <string name="options_location_refresh">Obnovit polohu</string>

    <!--  ALL  -->
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
    <string name="ok">OK</string>
    <string name="warning">Varování</string>
    <string name="no_connection">Nedostupné přípojení</string>
    <string name="location_unavailable">Poloha není dostupná</string>

    <!--  NEWS  -->
    <string name="news_residential_empty">Po výběru residentního města bude moct vidět poslední novinky</string>
    <string name="news_link_invalid">Neplatný link</string>
    <string name="news_link_open">Otevřít</string>
    <string name="news_no_news_available">Žádné novinky nyní nejsou k dispozici</string>
    <string name="tourist_no_events_available">Žádné události nyní nejsou k dispozici</string>
    <string name="pager_title_citizen">Občan</string>
    <string name="pager_title_tourist">Turista</string>

    <!--  EVENTS  -->
    <string name="event_detail_label">Detail události</string>

    <!--  NEWS DETAIL  -->
    <string name="news_detail_label">Detail novinky</string>

    <!--  CITY PICKER  -->
    <string name="city_pick_last_search_title">Poslední vyhledávání</string>

    <!--  CITY DETAIL  -->
    <string name="city_detail_population_title">Počet obyvatel: </string>
    <string name="city_detail_name_title">Název: </string>
    <string name="city_detail_description_title">Popis: </string>
    <string name="city_detail_residential_button">Nastavit jako rezidentní</string>
    <string name="city_detail_news_button">Poslední novinky</string>
    <string name="city_detail_map_button">Zobrazit na mapě</string>
    <string name="city_detail_web_button">Webové stránky</string>
    <string name="city_detail_residential_already_set">Již máte nastavené rezidentní město: %1$s. Opravdu chcete nastavit %2$s jako nové rezidentní město?</string>
    <string name="city_detail_residential_not_set_message">Rezidentní město není nastavené. Nejprve si vyberte město a nastavte jej jako reezidentní.</string>
    <string name="city_detail_residential_not_set_title">Rezidentní město nebylo nalezeno</string>
    <string name="menu_webpage">Web</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_favorite">Moje město</string>
    <string name="menu_news">Novinky</string>

    <!--  ISSUE CREATE  -->
    <string name="issue_create_label">Nové hlášení</string>
    <string name="issue_create_input_title_hint">Název</string>
    <string name="issue_create_input_desc_hint">Popis</string>
    <string name="issue_create_attachment_title">Příloha</string>
    <string name="issue_create_type_title">Typ hlášení</string>
    <string name="issue_create_invalid_title">Titulek hlášení musí být vyplněn</string>
    <string name="issue_create_invalid_description">Popis hlášení musí být vyplněn</string>
    <string name="issue_create_invalid_type">Typ hlášení musí být vybrán</string>
    <string name="issue_create_invalid_attachment">Před založením vyfoťe přílohu</string>
    <string name="issue_create_chooser_tittle">Vybrat přílohu</string>

    <!--  ISSUE DETAIL  -->
    <string name="issue_detail_label">Detail hlášení</string>
    <string name="issue_detail_description_title">Popis: </string>
    <string name="no_issues_created">Nevytvořil jste žádné zjištění</string>
    <string name="user_issue_counter">Máte %d podnětů</string>

    <!--  ISSUE TYPE  -->
    <string name="issue_type_public_damage">Veřejné škody</string>
    <string name="issue_type_lost_item">Ztráta věci</string>
    <string name="issue_type_pavements">Chodníky</string>
    <string name="issue_type_lights">Osvětlení</string>
    <string name="issue_type_trash">Odpadky</string>
    <string name="issue_type_others">Jiné</string>
    <string name="issue_type_unknown">Neznámé</string>

    <!--  ISSUE LIST  -->
    <string name="issue_list_label">Hlášení</string>

    <!--  PLACE TYPE  -->
    <string name="place_type_bar">Bar</string>
    <string name="place_type_park">Park</string>
    <string name="place_type_bus">Bus</string>
    <string name="place_type_cafe">Kavárna</string>
    <string name="place_type_church">Kostel</string>
    <string name="place_type_museum">Muzeum</string>
    <string name="place_type_police">Policie</string>
    <string name="place_type_parking">Parkování</string>
    <string name="place_type_poi">Zajímavá místa</string>

    <!--  PLACE DETAIL  -->
    <string name="place_detail_label">Detail místa</string>
    <string name="place_detail_open">Otevřeno</string>
    <string name="place_detail_closed">Zavřeno</string>
    <string name="place_detail_show_on_map">Zobrazit na mapě</string>
    <string name="place_detail_navigate">Zobrazit navigaci</string>

    <!--  SETTINGS  -->
    <string name="settings_label">Nastavení</string>
    <string name="settings_places_title">Nastavení míst</string>
    <string name="settings_issues_title">Nastavení hlášení</string>
    <string name="settings_pref_title">Uživatelské nastavení</string>
    <string name="settings_save">Uložit</string>
    <string name="settings_close">Zavřít</string>
    <string name="settings_places_check_all">Všechna místa</string>
    <string name="settings_issues_check_all">Všechna hlášení</string>
    <string name="settings_lang">Jazyk - CS</string>
    <string name="settings_user_role_tooltip">Jsem: </string>

    <!--  FILTER  -->
    <string name="filter_label">Filtr</string>
    <string name="filter_locations_title">Filtr měst</string>
    <string name="filter_cities_check_all">Všechna města</string>

    <!--  PUSH EVENTS  -->
    <string name="push_events_empty">V současné době nemáte žádné aktuality</string>
    <string name="push_events_label">Aktuality</string>

</resources>
