<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/news_fragment">


    <fragment
        android:id="@+id/news_fragment"
        android:name="com.pavelhabzansky.citizenapp.features.news.view.NewsFragment"
        android:label="@string/nav_menu_news" />

    <fragment
        android:id="@+id/city_picker_fragment"
        android:name="com.pavelhabzansky.citizenapp.features.cities.search.view.CityPickerFragment"
        android:label="@string/nav_menu_cities" />

    <fragment
        android:id="@+id/city_detail_fragment"
        android:name="com.pavelhabzansky.citizenapp.features.cities.detail.view.CityDetailFragment"
        android:label="@string/nav_label_city_detail" />

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.pavelhabzansky.citizenapp.features.map.view.MapFragment"
        android:label="@string/nav_label_map">

        <argument
            android:name="CONTEXT"
            android:defaultValue="NULL"
            app:argType="string" />

        <action
            android:id="@+id/to_create_issue"
            app:destination="@+id/issue_create_fragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/to_issue_list"
            app:destination="@+id/issue_list_fragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>

    <fragment
        android:id="@+id/map_fragment_citizen"
        android:name="com.pavelhabzansky.citizenapp.features.map.view.MapFragment"
        android:label="@string/nav_label_map">

        <argument
            android:name="CONTEXT"
            android:defaultValue="CITIZEN"
            app:argType="string" />

        <action
            android:id="@+id/to_create_issue"
            app:destination="@+id/issue_create_fragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/to_issue_list"
            app:destination="@+id/issue_list_fragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>

    <fragment
        android:id="@+id/map_fragment_tourist"
        android:name="com.pavelhabzansky.citizenapp.features.map.view.MapFragment"
        android:label="@string/nav_label_map">

        <argument
            android:name="CONTEXT"
            android:defaultValue="TOURIST"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/news_detail_fragment"
        android:name="com.pavelhabzansky.citizenapp.features.news.view.NewsDetailFragment"
        android:label="@string/news_detail_label" />

    <fragment
        android:id="@+id/news_citizen_fragment"
        android:name="com.pavelhabzansky.citizenapp.features.news.view.CitizenNewsFragment"
        android:label="@string/nav_menu_news" />

    <fragment
        android:id="@+id/issue_create_fragment"
        android:name="com.pavelhabzansky.citizenapp.features.issues.create.view.CreateIssueFragment"
        android:label="@string/issue_create_label" />

    <fragment
        android:id="@+id/issue_detail_fragment"
        android:name="com.pavelhabzansky.citizenapp.features.issues.detail.view.IssueDetailFragment"
        android:label="@string/issue_detail_label" />

    <fragment
        android:id="@+id/place_detail_fragment"
        android:name="com.pavelhabzansky.citizenapp.features.place.view.PlaceDetailFragment"
        android:label="@string/place_detail_label" />

    <fragment
        android:id="@+id/issue_list_fragment"
        android:name="com.pavelhabzansky.citizenapp.features.issues.list.view.IssueListFragment"
        android:label="@string/issue_list_label" />

    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.pavelhabzansky.citizenapp.features.settings.view.SettingsFragment"
        android:label="@string/settings_label" />

    <action
        android:id="@+id/toCityPickerFragment"
        app:destination="@id/city_picker_fragment" />

</navigation>