<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="info"
            type="com.pavelhabzansky.citizenapp.features.cities.detail.view.vo.CityInformationVO" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/margin_item_32"
        android:paddingTop="@dimen/margin_item_32"
        android:paddingEnd="@dimen/margin_item_32"
        android:paddingBottom="@dimen/margin_item_12">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cityLogo"
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cityNameLabel"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_item_12"
            app:layout_constraintStart_toEndOf="@id/cityLogo"
            app:layout_constraintTop_toTopOf="@id/cityLogo"
            tools:text="Název: " />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cityName"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_item_12"
            android:text="@{ info.name }"
            app:layout_constraintBottom_toBottomOf="@id/cityNameLabel"
            app:layout_constraintStart_toEndOf="@id/cityNameLabel"
            app:layout_constraintTop_toTopOf="@id/cityNameLabel"
            tools:text="Plzeň" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/populationLabel"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_item_12"
            app:layout_constraintStart_toEndOf="@id/cityLogo"
            app:layout_constraintTop_toBottomOf="@id/cityNameLabel"
            tools:text="Počet obyvatel: " />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/populationText"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_item_12"
            android:text="@{ info.population.toString() }"
            app:layout_constraintBottom_toBottomOf="@id/populationLabel"
            app:layout_constraintStart_toEndOf="@id/populationLabel"
            app:layout_constraintTop_toTopOf="@id/populationLabel"
            tools:text="-12345" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cityDescriptionTitle"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_item_12"
            android:text="@string/city_detail_description_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityLogo"
            tools:text="Popis:" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cityDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_item_12"
            android:text="@{ info.description }"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityDescriptionTitle"
            tools:text="sldkjfsldkfjsdlkfjsfkjsldkjfsldkfjsdlkfjsfkjsldkjfsldkfjsdlkfjsf
            kjsldkjfsldkfjsdlkfjsfkjsldkjfsldkfjsdlkfjsfkjsldkjfsldkfjsdlkfjsfkjsldkjfsl
            dkfjsdlkfjsfkjsldkjfsldkfjsdlkfjsfkj" />

        <Button
            android:id="@+id/setResidentialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_detail_residential_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/showOnMap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Nastavit jako rezidentní" />

        <Button
            android:id="@+id/showOnMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_detail_map_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/cityWebPageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Zobrazit na mapě" />

        <Button
            android:id="@+id/cityWebPageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_detail_web_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Webové stránky" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>